--- a/wwr/index.html
+++ b/wwr/index.html
@@ -22,7 +22,7 @@
         </header>
         <div id="hero">
             <div id="hero_box">
-                <img id="hero_img" src="images/hero.png" alt="People enjoying rafting">
+                <img id="hero_img" src="images/hero.png" alt="People enjoying rafting outdoors">
             </div>
             <section id="hero_msg">
                 <h1 class="home_title">Have An Adventure</h1>
