site plan changes

--- a/travelmoabsite/site_plan.html
+++ b/travelmoabsite/site_plan.html
@@ -88,8 +88,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Activities</a>
+        <a href="#">Dining</a>
       </nav>
       <hr>
       <h2>
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Activities <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Dining  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,29 +125,112 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        NATIONAL PARKS
+
+Arches National Park:
+One of the main things Moab is known for is the national parks nearby. Arches National Park is a must see. Located just 5 miles north of Moab, Arches contains the world's largest concentration of natural sandstone arches. Colossal sandstone fins, massive balanced rocks, soaring pinnacles and spires dwarf visitors as they explore the park's viewpoints and hiking trails. A paved scenic drive takes visitors to many of the major viewpoints within the park. The park will delight children and adults, with many easy trails with easy access to arch exploration. 
+
+Canyonlands:
+Canyonlands is the largest national park in Utah and is only 32 miles from Moab. There are many pullouts with spectacular views along the paved scenic drive. Hiking trails and four wheeling drive roads access backcountry areas for day or overnight trips. Take a short day hike or spend a relaxing afternoon enjoying the sunset. Whether a short or long trip, Canyonlands provides an unforgettable experience for the whole family.
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/arches-national-park-62973_1280.jpg" alt="image for homepage">
+        <img src="images/arches-national-park-6529177_1280.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Activities</h3>
       <p>
-        [Written copy for the Page 2 here]
+        OUTDOOR ACTIVITIES
+
+Overview:
+There is an insane amount of outdoor recreation that Moab has to offer. Here in Moab you can golf, go 4 wheeling, and mountain bike riding. You can go hot air ballooning if you’re feeling extra adventurous. For a relaxing weekend getaway, Moab offers magnificent bird watching, fishing and horseback riding. Mountain biking and motorcycle road touring is also very popular. 
+
+4-Wheeling:
+The Moab area’s beauty, history, and hundreds of miles of old mining roads and 4-wheel drive trails make it a place that will never be forgotten. Visitors can bring their own vehicle, rent a jeep, or take a tour with one of Moab’s experienced and permitted guides. Always remember that travel is limited to designated motorized routes only. Off-road travel is illegal.
+
+Golfing:
+The Moab Golf course is one of the most visually appealing in the state with its contrast of smooth, birght greens set amid rought, eroded red cliffs and boulders. The public course has 18 holes and a par of 72. It is open seven days a week, year round. It has a pro shop, a driving range, and a snack bar open for breakfast and lunch. Car rentals and lessons are available.
+
+Mountain Biking:
+Moab offers a hupe variety of trails for mountain bikers of any experience elvel. Moab is well known for the world famous, and highly technical, slickrock bike trail. This challenging 9.6 mile ride is considered by many to be the ultimate mountain biking experience. 
+
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/moab-101126_1280.jpg" alt="image for page">
+        <img src="images/mountain-biking-2006847_1280.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Dining</h3>
       <p>
-        [Written copy for the Page 3 here]
+        DINING
+
+Intro:
+Sample some of Moab’s southwestern and Mexican cuisine, or explore the interesting mix of Mexican, Thai, Italian and American restaurants. Moab also has a surprising number of gourmet-class restaurants, along with two breweries.
+
+Restaurants:
+98 Center
+98 East Center St
+435-355-0098
+Antica Forma
+267 N Main
+435-355-0167
+Arches Thai
+60 North 100 West
+435-355-0533
+Bangkok House Too
+59 Main St, Ste 8
+435-355-0168
+Blu Pig
+811 South Main St
+435-259-3333
+Bonjour Bakery Cafe, LLC
+59 S Main St Unit 2
+435-220-6017
+The Broken Oar
+53 West 400 North
+435-259-3127
+Canyon Pizza Co.
+500 S Main
+435-355-0660
+Canyon Steak & Waffle House
+196 S Main
+435-355-0119
+Canyonlands by Night & Day
+1861 North Highway 191
+435-259-5261
+Cowboy Grill
+Mile 14 Highway 128
+435-259-2002
+Desert Bistro
+36 South 100 West
+435-259-0756
+Dewey’s Restaurant and Bar
+57 S Main
+435-259-2337
+Domino’s
+702 S Main St
+435-259-5555
+El Charro Loco
+812 S Main St
+435-355-0854
+El Tapatio Family Mexican Restaurant
+125 S Main St
+435-355-0411
+Fiesta Mexicana
+202 Main St
+435-259-4366
+Giliberto’s Mexican Taco Shop
+396 S Main St
+435-294-2951
+Hidden Cuisine
+2740 S Highway 191
+
+
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/tacos-1613795_1280.jpg" alt="image for page3">
+        <img src="images/noodles-4440831_1280.jpg" alt="image for page3">
 
       </ul>
       <hr>
