real changes to faq page and css hopefully

--- a/wwr/faq.html
+++ b/wwr/faq.html
@@ -25,7 +25,7 @@
                 <img id="subimage" src="images/hero.png" alt="People enjoying rafting">
             </div>
             <section id="subtitlebox">
-                <h1 class="subtitle">FAQ</h1>
+                <h1 class="subtitle">F.A.Q.</h1>
                 <h4 class="subtitletitle">Frequently Asked Questions</h4>
             </section>
         </div>
