--- a/wwr/index.html
+++ b/wwr/index.html
@@ -52,7 +52,7 @@
             <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
             <section class="msg">
                 <h2>More Than Just The Thrill</h2>
-                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's an opportunity to experience the great outdoors like you've never before.</p>
+                <p>Enjoy the breathtaking scenery! From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's an opportunity to experience the great outdoors like you've never before.</p>
                 <a class="join" href="contactus.html">Join Us</a>
             </section>
         </main>
