--- a/travelmoabsite/index.html
+++ b/travelmoabsite/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
     <div id="content">
@@ -34,14 +35,28 @@
             </section>
             <section class="arches_imgbox">
                 <img class="arches_img" src="images/arches-national-park-62973_1280.jpg" alt="Arches national park">
+                <a class="view_morea" href="https://www.nps.gov/arch/index.htm">view more+</a>
             </section>
             <section class="canyon_imgbox">
                 <img class="canyon_img" src="images/sunset-1802028_1280.jpg" alt="Canyonlands national park">
+                <a class="view_morec" href="https://www.wildnatureimages.com/gallery/canyonlands-photos/">view more+</a>
             </section>
             <section class="canyon_info">
-                <h2>Canyonlands</h2>
+                <h2>Canyonlands National Park</h2>
                 <p>Canyonlands is the largest national park in Utah and is only 32 miles from Moab. There are many pullouts with spectacular views along the paved scenic drive. Hiking trails and four wheeling drive roads access backcountry areas for day or overnight trips. Take a short day hike or spend a relaxing afternoon enjoying the sunset. Whether a short or long trip, Canyonlands provides an unforgettable experience for the whole family.</p>
             </section>
+            <section class="add_info">
+                <h2>Additional info</h2>
+            </section>
+            <section class="blank">
+                <p></p>
+            </section>
+            <section class="arches_button">
+                <a class="info_button" href="https://www.nps.gov/arch/index.htm">Arches National Park</a>
+            </section>
+            <section class="canyon_button">
+                <a class="info_button" href="https://www.nps.gov/cany/index.htm">Canyonlands National Park</a>
+            </section>         
         </main>
         <footer>
             <img class="logo_end" src="images/moablogo.png" alt="little logo">
