outdoor activities css

--- a/travelmoabsite/dining.html
+++ b/travelmoabsite/dining.html
@@ -29,11 +29,11 @@
         </div>
         <main class="dining_grid">
             <section class="overview">
-                <h4>Overview:</h4>
+                <h4>Overview</h4>
                 <p>Sample some of Moab’s southwestern and Mexican cuisine, or explore the interesting mix of Mexican, Thai, Italian and American restaurants. Moab also has a surprising number of gourmet-class restaurants, along with two breweries.</p>
             </section>
             <section class="restaurants">
-                <h4>Restaurants:</h4>
+                <h4>Restaurants</h4>
             </section>
             <section class="column1">
                 <p>Pizza Pie 98 Center 98 East Center St (435)-355-0098</p>
