--- a/travelmoabsite/outdooractivities.html
+++ b/travelmoabsite/outdooractivities.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Outdoor activities</title>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
     <div id="content">
@@ -28,19 +29,19 @@
         </div>
         <main class="activities_grid">
             <section class="overview">
-                <h4>Overview:</h4>
+                <h4>Overview</h4>
                 <p>There is an insane amount of outdoor recreation that Moab has to offer. Here in Moab you can golf, go 4 wheeling, and mountain bike riding. You can go hot air ballooning if you’re feeling extra adventurous. For a relaxing weekend getaway, Moab offers magnificent bird watching, fishing and horseback riding. Mountain biking and motorcycle road touring is also very popular.</p>
             </section>
-            <section class="4wheeling">
-                <h4>4-Wheeling: </h4>
+            <section class="fourwheeling">
+                <h4>4-Wheeling</h4>
                 <p>The Moab area’s beauty, history, and hundreds of miles of old mining roads and 4-wheel drive trails make it a place that will never be forgotten. Visitors can bring their own vehicle, rent a jeep, or take a tour with one of Moab’s experienced and permitted guides. Always remember that travel is limited to designated motorized routes only. Off-road travel is illegal.</p>
             </section>
             <section class="golfing">
-                <h4>Golfing: </h4>
+                <h4>Golfing</h4>
                 <p>The Moab Golf course is one of the most visually appealing in the state with its contrast of smooth, birght greens set amid rought, eroded red cliffs and boulders. The public course has 18 holes and a par of 72. It is open seven days a week, year round. It has a pro shop, a driving range, and a snack bar open for breakfast and lunch. Car rentals and lessons are available.</p>   
             </section>
             <section class="biking">
-                <h4>Mountain Biking: </h4>
+                <h4>Mountain Biking</h4>
                 <p>Moab offers a hupe variety of trails for mountain bikers of any experience elvel. Moab is well known for the world famous, and highly technical, slickrock bike trail. This challenging 9.6 mile ride is considered by many to be the ultimate mountain biking experience.</p>   
             </section>
             
